updated about, index, and teams pg design and info for recruitment. also added two images

--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -17,31 +17,24 @@
         </div>
 
         <div class = "our-story">
-            <div class = "our-story-info">
-                <h2> our <br /> story</h2>
-                <br/>
-                <h4><b>medium (n.)
-                    <br />
-                    an agency or a means to do something</b>
-                </h4>
-
-                    <br/>
-                    Medium was founded in 2015 by 3 AAP students who decided to transform a design publication into a live event.
-                    Together, they created RAW Expo, a design exhibition in which students from all across campus showcased their work.
-                    The event was a huge hit - 500+ attendees proved that there was an incredible amount of interest in and need for an
-                    interdisciplinary design group. From RAW, Medium Design Collective spawned, to become a community of designers who
-                    collaborate on innovative projects and serve as a platform and resource for design dialogue.
-                    <br/>
-                <br/>
+            <div class = "our-story__img our-story__right" style="background-image: url('{% static 'imgs/pam.jpg' %}');"></div>
+            <div class = "our-story__text-wrap left">
+                    <div class= "our-story__text">
+                        <h2> our story</h2>
+                        <br/>
+                        <h5>medium (n.)
+                            <br />
+                            an agency or a means to do something
+                        </h5>
+                            <br/>
+                            Medium was founded in 2015 by 3 AAP students who decided to transform a design publication into a live event.
+                            Together, they created RAW Expo, a design exhibition in which students from all across campus showcased their work.
+                            The event was a huge hit - 500+ attendees proved that there was an incredible amount of interest in and need for an
+                            interdisciplinary design group. From RAW, Medium Design Collective spawned, to become a community of designers who
+                            collaborate on innovative projects and serve as a platform and resource for design dialogue.
+                    </div>
+                </div>
             </div>
-
-            <div class = "double-img-overlap">
-                <ul>
-                    <li><img src = "{% static 'imgs/pam.jpg' %}" /></li>
-                    <li><img src = "{% static 'imgs/pam.jpg' %}" /></li>
-                </ul>
-            </div>
-        </div>
 
         <div class = "our-mission" style="background-image: url('{% static 'imgs/story.jpg' %}');">
             <div class = "our-mission-info">
@@ -112,37 +105,37 @@
 
             <div class = "our-capacity-info">
                 <div class = "our-capacity-detail">
-                    <h5>spatial <br />design</h5>
+                    <h4>spatial <br />design</h4>
                 </div>
                 <div class = "our-capacity-detail">
-                    <h5>exhibition <br />design</h5>
+                    <h4>exhibition <br />design</h4>
                 </div>
                 <div class = "our-capacity-detail">
-                    <h5>product <br />design</h5>
+                    <h4>product <br />design</h4>
                 </div>
                 <div class = "our-capacity-detail">
-                    <h5>event <br />design</h5>
+                    <h4>event <br />design</h4>
                 </div>
                 <div class = "our-capacity-detail">
-                    <h5>website <br />design</h5>
+                    <h4>website <br />design</h4>
                 </div>
                 <div class = "our-capacity-detail">
-                    <h5>marketing <br /> & <br /> branding</h5>
+                    <h4>marketing <br /> & branding</h4>
                 </div>
                 <div class = "our-capacity-detail">
-                    <h5>entrepreneurship</h5>
+                    <h4>entrepreneurship</h4>
                 </div>
                 <div class = "our-capacity-detail">
-                    <h5>app <br />design</h5>
+                    <h4>app <br />design</h4>
                 </div>
                 <div class = "our-capacity-detail">
-                    <h5>graphic <br />design</h5>
+                    <h4>graphic <br />design</h4>
                 </div>
                 <div class = "our-capacity-detail">
-                    <h5>design <br />strategy</h5>
+                    <h4>design <br />strategy</h4>
                 </div>
                 <div class = "our-capacity-detail">
-                    <h5>ux <br />design</h5>
+                    <h4>ux <br />design</h4>
                 </div>
             </div>
 
@@ -156,20 +149,29 @@
         </div>
 
         <div class = "join-us">
-            <img src = "{% static 'imgs/joinus.jpg' %}" />
-            <div class = "join-us-info">
-                <!-- <h2>join us</h2>
-                <h4><b>mailing list</b></h4>
-                <br />
-                <br /> -->
-                <h2>contact us</h2>
-                <b>mediumdesigncollective@gmail.com</b>
+            <div class = "join-us__img join-us__left" style = "background-image: url('{% static 'imgs/joinus.jpg' %}');"></div>
+            <div class = "join-us__text-wrap right">
+                    <div class = "join-us__text">
+                        <h2>join us</h2>
+                        <br />
+                        <h5>Our Fall 2019 Applications just opened!
+                            <br /> Make sure to apply
+                            <a href="https://docs.google.com/forms/d/1xYReNXJJlZjSPnJfmsaLb3LwrOx9MrRegCQhoXfCaTg/edit">here</a>!
+                        <br />
+                        <br />
+                        Contact:
+                        <br  />
+                        Email: mediumdesigncollective@gmail.com
+                        <br />
+                        Facebook: <a href="https://www.facebook.com/mediumdesigncollective/">Medium Design Collective</a>
+                        </h5>
+                    </div>
+                </div>
             </div>
-        </div>
 
         <div class = "end-m">
             <center>
-                <h4><b>- m -</b></h4>
+                <h3><b>- m -</b></h3>
             </center>
         </div>
 {% endblock %}
