--- a/static/html/sections/index.html
+++ b/static/html/sections/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="narrative__img narrative__right" style="background-image: url('{% static 'imgs/raw.jpg' %}');"></div>
     </div> -->
-    <div class="narrative__wrap">
+    <!-- <div class="narrative__wrap">
         <div class="narrative__text-wrap right">
             <div class="narrative__text">
                 <div class="narrative__title">community</div>
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/team.jpg' %}');"></div>
-    </div>
+    </div> -->
 
     <!-- <div class="fullscreen-background">
         <a href="https://www.facebook.com/events/236180950400003/">
