--- a/static/html/sections/teams.html
+++ b/static/html/sections/teams.html
@@ -9,16 +9,33 @@
 {% block content %}
 <div class="narrative">
     <div class="narrative__wrap">
+        <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/incubate.jpg' %}');"></div>
+        <div class="narrative__text-wrap right">
+            <div class="narrative__title"></div>
+            <div class="narrative__text">
+                <div class="narrative__title">incubate projects.</div>
+                Starting in Fall 2019, Medium is launching incubate projects.
+                They are created by our incubate teams, groups of 3-5 who are looking
+                to create things that solve a problem, bring new perspectives, or address
+                a pressing gap. Projects follow the design process and are themed to
+                address the topics of the creative direction of that year. These projects
+                can be anything from creating <a href="https://www.jialinke.com/pulse">
+                an interactive exhibition</a> that relates pulse with music therapy to
+                <a href="http://shiro.community/"> a website </a>of visualizations to
+                inspire discussions about life.
+            </div>
+        </div>
+    </div>
+    <div class="narrative__wrap">
         <div class="narrative__img narrative__right" style="background-image: url('{% static 'imgs/events.jpg' %}');"></div>
         <div class="narrative__text-wrap left">
             <div class="narrative__text">
-                <div class="narrative__title">events team</div>
-                The events team develops and hosts numerous workshops, panels,
-                and talks throughout the semester, culminating with our annual
-                exposition of creative processes, RAW EXPO, in the spring.
-                Additionally, our team works to collaborate on events with
-                other organizations across campus, in line with Medium's mission
-                to further strengthen and expand Cornell's design community.
+                <div class="narrative__title">events.</div>
+                Medium hosts a variety of design events during the academic year.
+                These events can include design panels, design thinking activities in
+                collaboration with other campus organizations, design hackathons and more.
+                Our biggest event is RAW Expo, in which organizations and individuals
+                showcase their design work and design process at the end of the year.
             </div>
         </div>
     </div>
@@ -26,12 +43,11 @@
         <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/design.jpg' %}');"></div>
         <div class="narrative__text-wrap right">
             <div class="narrative__text">
-                <div class="narrative__title">design team</div>
-                The design team is in charge of developing a compelling
-                brand around Medium. Members of the design team
-                work with the web, editorial, and events teams
-                to iterate upon and ideate design solutions that further
-                Medium’s mission.
+                <div class="narrative__title">publication.</div>
+                Medium Design Review is a magazine that is released at RAW Expo.
+                The magazine aims to be a reflection of and dialogue on design work
+                and design culture. The Design Review is a pulse of the design
+                community both at Cornell, and in the design industry.
             </div>
         </div>
     </div>
@@ -40,7 +56,7 @@
         <div class="narrative__text-wrap left">
             <div class="narrative__title"></div>
             <div class="narrative__text">
-                <div class="narrative__title">web team</div>
+                <div class="narrative__title">web.</div>
                 The web team is responsible for maintaining Medium’s
                 site. Members of the web team learn how
                 to build and deploy web apps in Python, as well as
@@ -50,16 +66,15 @@
         </div>
     </div>
     <div class="narrative__wrap">
-        <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/publication.jpg' %}');"></div>
+        <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/workshop.jpg' %}');"></div>
         <div class="narrative__text-wrap right">
             <div class="narrative__title"></div>
             <div class="narrative__text">
-                <div class="narrative__title">editorial team</div>
-                The editorial team researches and authors articles
-                concerning Cornell’s design community. Members
-                of the publication team work closely with
-                the web team in order to generate content for Medium’s
-                digital publication.
+                <div class="narrative__title">workshops.</div>
+                Throughout the semester, we host workshops that teach design skill
+                development. Our Education team teaches Adobe Photoshop, Illustrator,
+                and InDesign every year. In addition, the team hosts additional workshops,
+                such as digital art, visual communication, and animation, depending on interest.
             </div>
         </div>
     </div>
