add application link to the front and removes sponsors

--- a/static/html/sections/index.html
+++ b/static/html/sections/index.html
@@ -13,10 +13,11 @@
     <div class="fullscreen-background__overlay"></div>
     <div class="fullscreen-background__text">
         <h1 class="unselectable">medium design collective</h1>
+        <h2 class = "unselectable">Apply <a href="https://tinyurl.com/mediumcornell">here</a>!</h2>
     </div>
 </div>
-<div class="narrative">
-    <!-- <div class="narrative__wrap">
+<!-- <div class="narrative">
+    <div class="narrative__wrap">
         <div class="narrative__text-wrap left">
             <div class="narrative__text">
                 <div class="narrative__title">mission</div>
@@ -29,8 +30,8 @@
             </div>
         </div>
         <div class="narrative__img narrative__right" style="background-image: url('{% static 'imgs/raw.jpg' %}');"></div>
-    </div> -->
-    <!-- <div class="narrative__wrap">
+    </div>
+    <div class="narrative__wrap">
         <div class="narrative__text-wrap right">
             <div class="narrative__text">
                 <div class="narrative__title">community</div>
@@ -52,9 +53,9 @@
             </div>
         </div>
         <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/team.jpg' %}');"></div>
-    </div> -->
+    </div>
 
-    <!-- <div class="fullscreen-background">
+    <div class="fullscreen-background">
         <a href="https://www.facebook.com/events/236180950400003/">
           <video autoplay loop muted class="fullscreen-background__promo">
             <source src="{% static 'videos/promo_medium.mp4' %}">
@@ -62,10 +63,10 @@
          </a>
 
 
-    </div> -->
-    <!-- <div class="newsletter">
+    </div>
+    <div class="newsletter">
         <div class="newsletter__text">newsletter</div>
         <div class="newsletter__field"></div>
-    </div>-->
-</div>
+    </div>
+</div>-->
 {% endblock %}
