--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -141,12 +141,12 @@
 
         </div>
 
-        <div class = "our-sponsors">
+        <!-- <div class = "our-sponsors">
             <h2>our sponsors</h2>
             <div class = "sponsors-img">
                 <img src = "{% static 'imgs/adobe.png' %}" />
             </div>
-        </div>
+        </div> -->
 
         <div class = "join-us">
             <div class = "join-us__img join-us__left" style = "background-image: url('{% static 'imgs/joinus.jpg' %}');"></div>
@@ -156,7 +156,7 @@
                         <br />
                         <h5>Our Fall 2019 Applications just opened!
                             <br /> Make sure to apply
-                            <a href="https://docs.google.com/forms/d/1xYReNXJJlZjSPnJfmsaLb3LwrOx9MrRegCQhoXfCaTg/edit">here</a>!
+                            <a href="https://tinyurl.com/mediumcornell">here</a>!
                         <br />
                         <br />
                         Contact:
