removed application links

--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -154,12 +154,9 @@
                     <div class = "join-us__text">
                         <h2>join us</h2>
                         <br />
-                        <h5>Our Fall 2019 Applications just opened!
-                            <br /> Make sure to apply
-                            <a href="https://tinyurl.com/mediumcornell">here</a>!
                         <br />
-                        <br />
-                        Contact:
+                        <h5>
+                        Contact
                         <br  />
                         Email: mediumdesigncollective@gmail.com
                         <br />
