hopefully final bug fix for events

--- a/static/html/sections/events.html
+++ b/static/html/sections/events.html
@@ -79,6 +79,6 @@
 
 {% block scripts %}
 <script src="{% static 'js/vendor/jquery.path.js' %}"></script>
-<script>var initialEventId = {{ nearest_event }};</script>
+<script>var initialEventId = 0;</script>
 <script src="{% static 'js/sections/events.js' %}"></script>
 {% endblock %}
