--- a/static/html/sections/events.html
+++ b/static/html/sections/events.html
@@ -14,7 +14,7 @@
       <div class="desktop__lst__bot-fade"></div>
       <p class="desktop__lst__down-message unselectable">press &darr; for upcoming events</p>
 
-      {% for event in events reversed %}
+      {% for event in events %}
       <div class="desktop__event unselectable" data-event-id="{{ event.id }}">
         <span class="desktop__event__date">{{ event.full_date }}</span>
         <span class="desktop__event__title">{{ event.title }}</span>
@@ -25,7 +25,7 @@
       {% endfor %}
     </div>
     <div class="desktop__desc col-6">
-        {% for event in events reversed %}
+        {% for event in events %}
         <div class="desktop__desc__content-box" id="event-{{ event.id }}">
           <img class="desc__img" src="{% static event.image %}">
           <h1 class="desc__title">{{ event.title }}</h1>
