--- a/static/html/sections/d&i.html
+++ b/static/html/sections/d&i.html
@@ -9,11 +9,8 @@
 
 {% block content %}
 <div class="narrative">
+
   <div class="fullscreen-background">
-      <video autoplay loop muted class="fullscreen-background__video">
-          <source src="{% static 'videos/RAW.mp4' %}">
-      </video>
-      <div class="fullscreen-background__overlay"></div>
       <div class="fullscreen-background__text">
         <h1 class="narrative__title">diversity and inclusion</h1>
         <p>what does diversity and inclusion mean to you? <br/></p>
@@ -24,10 +21,22 @@
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10 narrative__definition__text fade_in">
+        "
+        <br />
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
       <div class="col-md-1"></div>
     </div>
+  </div>
+  <div class="fullscreen-background">
+      <div class="fullscreen-background__text intro">
+          This year medium design collective explores what it means to be
+
+          <div class = "holographic">diverse and inclusive.</div>
+          <br />
+          We have gathered stories...
+        <!-- <div class="arrow"></div> -->
+      </div>
   </div>
   <div class="narrative__countdown container">
     <div class="narrative__message row">
