added article imgs, title, and author

--- a/static/html/sections/d&i.html
+++ b/static/html/sections/d&i.html
@@ -28,14 +28,52 @@
       <div class="col-md-1"></div>
     </div>
   </div>
-  <div class="fullscreen-background">
+  <div class="fullscreen-background container">
       <div class="fullscreen-background__text intro">
           This year medium design collective explores what it means to be
 
           <div class = "holographic">diverse and inclusive.</div>
           <br />
-          We have gathered stories...
-        <!-- <div class="arrow"></div> -->
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+  </div>
+  <div class="fullscreen-background container">
+      <div class = "row">
+          <div class="col-md"></div>
+          <div class = "col-md-3 article border">
+              <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
+              "most striking quote from the article written here"
+              <br />
+              <div class = "detail">
+                  Title
+                  <br />
+                  Author
+              </div>
+              <button type="button" class="articleBtn">READ</button>
+          </div>
+          <div class = "col-md-3 article border">
+              <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
+              "most striking quote from the article written here"
+              <br />
+              <div class = "detail">
+                  Title
+                  <br />
+                  Author
+              </div>
+              <button type="button" class="articleBtn">READ</button>
+          </div>
+          <div class = "col-md-3 article border">
+              <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
+              "most striking quote from the article written here"
+              <br />
+              <div class = "detail">
+                  Title
+                  <br />
+                  Author
+              </div>
+              <button type="button" class="articleBtn">READ</button>
+          </div>
+          <div class="col-md"></div>
       </div>
   </div>
   <div class="narrative__countdown container">
