--- a/static/html/sections/d&i.html
+++ b/static/html/sections/d&i.html
@@ -14,10 +14,10 @@
       <div class="fullscreen-background__text">
         <h1 class="narrative__title">diversity and inclusion</h1>
         <p>what does diversity and inclusion mean to you? <br/></p>
-        <!-- <div class="arrow"></div> -->
+        <div class="arrow"></div>
       </div>
   </div>
-  <div class="narrative__definition container">
+  <div class="narrative__definition container" id = "opening">
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10 narrative__definition__text fade_in">
@@ -31,7 +31,6 @@
   <div class="fullscreen-background container">
       <div class="fullscreen-background__text intro">
           This year medium design collective explores what it means to be
-
           <div class = "holographic">diverse and inclusive.</div>
           <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -47,9 +46,11 @@
               <div class = "detail">
                   Title
                   <br />
-                  Author
+                  Colton Poore
               </div>
-              <button type="button" class="articleBtn">READ</button>
+              <div class="col text-center">
+                  <button type="button" class="articleBtn">READ</button>
+              </div>
           </div>
           <div class = "col-md-3 article border">
               <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
@@ -58,9 +59,11 @@
               <div class = "detail">
                   Title
                   <br />
-                  Author
+                  Mollie Zhang
               </div>
-              <button type="button" class="articleBtn">READ</button>
+              <div class="col text-center">
+                  <button type="button" class="articleBtn">READ</button>
+              </div>
           </div>
           <div class = "col-md-3 article border">
               <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
@@ -69,9 +72,12 @@
               <div class = "detail">
                   Title
                   <br />
-                  Author
+                  Jennifer Lee
               </div>
-              <button type="button" class="articleBtn">READ</button>
+              <div class="col text-center">
+                  <button type="button" class="articleBtn">READ</button>
+              </div>
+
           </div>
           <div class="col-md"></div>
       </div>
