added end points for 3 articles and removed arrow animation

--- a/static/html/sections/d&i.html
+++ b/static/html/sections/d&i.html
@@ -49,7 +49,7 @@
                   Colton Poore
               </div>
               <div class="col text-center">
-                  <button type="button" class="articleBtn">READ</button>
+                  <a href="/article/1"><button type="button" class="articleBtn">READ</button></a>
               </div>
           </div>
           <div class = "col-md-3 article border">
@@ -62,7 +62,7 @@
                   Mollie Zhang
               </div>
               <div class="col text-center">
-                  <button type="button" class="articleBtn">READ</button>
+                    <a href="/article/2"><button type="button" class="articleBtn">READ</button></a>
               </div>
           </div>
           <div class = "col-md-3 article border">
@@ -75,7 +75,7 @@
                   Jennifer Lee
               </div>
               <div class="col text-center">
-                  <button type="button" class="articleBtn">READ</button>
+                  <a href="/article/3"><button type="button" class="articleBtn">READ</button></a>
               </div>
 
           </div>
